# ando_2

./: Cargo.toml  README.md
src/: anime.rs  cache.rs  cli.rs  main.rs  net.rs  parser.rs  settings.rs
src/cli/: download_menu.rs  main_menu.rs  mod.rs  settings_menu.rs  states.rs
